<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_no_connection_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/iv_no_connection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_no_internet_satellite"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_no_connection" />

    <TextView
        android:id="@+id/tv_no_connection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_whoops"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_connection" />

    <TextView
        android:id="@+id/tv_no_connection_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large__"
        android:text="@string/label_message_no_connection"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_connection_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no_connection_retry"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large__"
        android:text="@string/label_retry"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_no_connection_title"
        app:layout_constraintStart_toStartOf="@+id/tv_no_connection_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_connection_message"
        app:strokeColor="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>